# uploadR2

./: .env.example  .gitignore  IMPLEMENTATION_SUMMARY.md  README.md  main.py  pyproject.toml
docs/: MODIFICATION_SUMMARY.md  TEST_RESULTS_SUMMARY.md  database_architecture_design.md  database_usage.md
images/original/: .gitkeep
images/transfer/: .gitkeep
logs/: .gitkeep
src/: __init__.py  batch_processor.py  config.py  progress_tracker.py  r2_uploader.py
src/database/: __init__.py  database_manager.py  exceptions.py  models.py  schema.py  short_key_generator.py
src/utils/: __init__.py  database_integration.py  file_utils.py  hash_utils.py  image_processor.py  logger.py
test/: demo_database.py  test_database.py  test_new_upload_flow.py  test_shortkey_collision.py  test_simple.py  test_upgrade_only.py
