[project]
name = "uploadr2"
version = "0.1.0"
description = "批量上傳圖片到Cloudflare R2存儲的工具，支援SQLite資料庫和短檔名功能"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.12.12",
    "asyncio>=3.4.3",
    "black>=25.1.0",
    "boto3>=1.38.34",
    "isort>=6.0.1",
    "mypy>=1.16.0",
    "pillow>=11.2.1",
    "pre-commit>=4.2.0",
    "pydantic>=2.11.5",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "python-dotenv>=1.1.0",
    "tqdm>=4.67.1",
    "typing-extensions>=4.14.0",
]
